# BlackMint

./: Cargo.toml  README.md  proyect.toml  proyecto.toml
.github/workflows/: ci.yml  rust-ci.yml
Redteam/: cve-2023-34362.py  exploits  payload.txt
Rusttool/: Portscanner.rs  Wifi_scanner.rs
`py/blackmint/: init.py  ioc_analyzer.py
core/: linux_baseline.sh  sql_injection_sigma_rule.yml
core/src/: lib.rs
core/src/forensic/: Wipe_test.rs  mod.rs  traces.rs  wipe.rs  wipe_test.rs
core/src/stealth/: mod.rs
docs/: api-reference.md
tests/: forensic_tests.rs
